@@ -2,6 +2,7 @@
 Version: 1.0.5
 Date: ????
   Changes:
+    - Better compatibility with Tiered Solar System.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 2025-02-02
